07-kubernetes/08-configuration/src/task-02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: default
  labels:
    app: http-application
spec:
  type: ClusterIP
  selector:
    app: http-application
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 80
